# spend

./: .gitignore  README.md  SKILL.md  ecosystem.config.cjs  schema.sql  setup.sh
.github/workflows/: deploy-dashboard.yml
cli/: Cargo.toml  README.md  SKILL.md  schema.sql  setup.sh
cli/migrations/: 20260711_single_tag_model.sql
cli/src/: main.rs
dashboard/: .env.example  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx
dashboard/src/app/api/auth/: route.ts
dashboard/src/app/api/dashboard/: route.ts
dashboard/src/app/api/payees/: route.ts
dashboard/src/app/api/payees/[id]/: route.ts
dashboard/src/app/api/review/: route.ts
dashboard/src/app/api/status/: route.ts
dashboard/src/app/api/tags/: route.ts
dashboard/src/app/api/transactions/: route.ts
dashboard/src/app/api/transactions/[id]/: route.ts
dashboard/src/app/dashboard/: page.tsx
dashboard/src/app/payees/: page.tsx
dashboard/src/app/review/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/app/transactions/: page.tsx
dashboard/src/components/: add-spend-dialog.tsx  app-shell.tsx  dashboard-client.tsx  date-range-controls.tsx  metric-card.tsx  password-gate.tsx  payee-rule-dialog.tsx  payees-client.tsx  providers.tsx  review-client.tsx  settings-client.tsx  tag-select.tsx  theme-provider.tsx  transactions-client.tsx
dashboard/src/components/ui/: chart.tsx
dashboard/src/hooks/: use-mobile.ts
dashboard/src/lib/: date-ranges.ts  db.ts  format.ts  types.ts  validators.ts
src/: main.rs
