[package]
name = "spend"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
csv = "1.4.0"
postgres = { version = "0.19.12", features = ["with-chrono-0_4"] }
rust_decimal = { version = "1.39.0", features = ["serde-with-str"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
